k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ng-jenkins-demo
  labels:
    name: ng-jenkins-demo
    purpose: demo
